# qa-automation

./: .gitignore  README.md  requirements.txt
.github/workflows/: tests.yml
api/: main.py
api/db/: session.py
api/db/models/: user_model.py
api/services/: user_service.py
qa-api-framework/: .env.example  .gitignore  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  test_test.db
qa-api-framework/api/: main.py
qa-api-framework/api/db/: session.py
qa-api-framework/api/db/models/: user_model.py
qa-api-framework/api/routes/: user_routes.py
qa-api-framework/api/schemas/: user_schema.py
qa-api-framework/api/services/: user_service.py
qa-api-framework/tests/: conftest.py  test_users.py  test_users_invalid.py
qa-api-framework/tests/e2e/: test_users_e2e.py  test_users_negative_e2e.py
qa-api-framework/tests/fixtures/: api_client.py  database.py  users.py
qa-api-framework/utils/: logger.py
tests/: conftest.py
tests/fixtures/: api_client.py
tests/integration/: test_users_crud.py
