[project]
name = "qa-api-framework"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.135.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "python-dotenv>=1.0.0",
    "email-validator>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "pytest-html>=4.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "httpx>=0.27.0",
    "pytest-playwright>=0.7.0",
    "faker>=40.13.0"
]
